objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>All Products</fullName>
        <isActive>false</isActive>
        <values>
            <fullName>0%2E Undiscovered</fullName>
        </values>
        <values>
            <fullName>1%2E Discover the Hurt</fullName>
        </values>
        <values>
            <fullName>2%2E Qualify the Hurt</fullName>
        </values>
        <values>
            <fullName>3%2E Amplify the Hurt</fullName>
        </values>
        <values>
            <fullName>7%2E Tailor the Solution</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>BZ Migration</fullName>
        <description>Stages for BZ Migration outreach team.</description>
        <isActive>false</isActive>
        <values>
            <fullName>Closed - Lost</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Baseline%2FIPT%2FIS Sales Process</fullName>
        <description>Baseline/IPT/IS Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>0%2E Undiscovered</fullName>
        </values>
        <values>
            <fullName>1%2E Discover the Hurt</fullName>
        </values>
        <values>
            <fullName>2%2E Qualify the Hurt</fullName>
        </values>
        <values>
            <fullName>3%2E Amplify the Hurt</fullName>
        </values>
        <values>
            <fullName>4%2E Present a Solution</fullName>
        </values>
        <values>
            <fullName>5%2E Confirm Buy-In</fullName>
        </values>
        <values>
            <fullName>6%2E Supply Solution Details</fullName>
        </values>
        <values>
            <fullName>7%2E Tailor the Solution</fullName>
        </values>
        <values>
            <fullName>8%2E Validate Commitment</fullName>
        </values>
        <values>
            <fullName>9%2E Contract Decision</fullName>
        </values>
        <values>
            <fullName>Closed - Lost</fullName>
        </values>
        <values>
            <fullName>Closed - Won</fullName>
        </values>
        <values>
            <fullName>Inactive%2FCancelled</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DAP</fullName>
        <isActive>false</isActive>
        <values>
            <fullName>0%2E Undiscovered</fullName>
        </values>
        <values>
            <fullName>1%2E Discover the Hurt</fullName>
        </values>
        <values>
            <fullName>2%2E Qualify the Hurt</fullName>
        </values>
        <values>
            <fullName>3%2E Amplify the Hurt</fullName>
        </values>
        <values>
            <fullName>7%2E Tailor the Solution</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DOX Sales Process</fullName>
        <isActive>false</isActive>
        <values>
            <fullName>Closed - Lost</fullName>
        </values>
        <values>
            <fullName>Closed - Won</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Digital Solutions Sales Process</fullName>
        <isActive>false</isActive>
        <values>
            <fullName>Closed - Lost</fullName>
        </values>
        <values>
            <fullName>Closed - Won</fullName>
        </values>
        <values>
            <fullName>Inactive%2FCancelled</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>F%26I %26 ELF Sales Process</fullName>
        <isActive>false</isActive>
        <values>
            <fullName>Closed - Lost</fullName>
        </values>
        <values>
            <fullName>Closed - Won</fullName>
        </values>
        <values>
            <fullName>Inactive%2FCancelled</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Forecast Sales Process</fullName>
        <isActive>false</isActive>
        <values>
            <fullName>Closed - Lost</fullName>
        </values>
        <values>
            <fullName>Closed - Won</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ADPDS_CMF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IS Contract CMF</label>
        <referenceTo>CMF_Info__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADPDS_Digital_Solutions_QC_Total__c</fullName>
        <formula>NULLVALUE(Digital_Advertising_QC__c , 0)  +   NULLVALUE(Digital_Marketing_QC__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Digital Advertising QC  +   Digital Marketing QC</inlineHelpText>
        <label>Digital Solutions QC Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADP_Discovery_Guide_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CDK Discovery Guide Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADP_Opp_Owner_Title__c</fullName>
        <formula>ADP_Opportunity_Owner__r.Title  

/* $User.Title  = from sanjay but wrong */</formula>
        <label>CDK Opp Owner Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADP_Opportunity_ID__c</fullName>
        <label>CDK Opportunity ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ADP_Opportunity_Owner_Manager1__c</fullName>
        <formula>(ADP_Opportunity_Owner__r.Manager.FirstName) &amp; &apos; &apos; &amp; ( ADP_Opportunity_Owner__r.Manager.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CDK Opportunity Owner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADP_Opportunity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the new Opportunity Owner. This field should be used in all opportunity reports as the (old) Opportunity Owner will be &apos;admin&apos;</inlineHelpText>
        <label>CDK Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Phone__c</fullName>
        <formula>Account.Phone</formula>
        <label>Account Phone #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Agency_Involved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ad Agency Involved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Addendum_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Standard Addendum Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Demo_Completed__c</fullName>
        <label>Additional Demo Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BZ_Contract_End_Date__c</fullName>
        <label>BZ Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BZ_Website_Migration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BZ Website Migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Baseline_NNC__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Baseline NNC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Baseline_RC__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Baseline RC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick/GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VW</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CB_BAC_Code__c</fullName>
        <description>BAC number information Docusign Template</description>
        <formula>CB_Business_Site__r.BAC__c</formula>
        <label>BAC Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Business_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field has been added to facilitate Dealer Code# on order form in Docusign</description>
        <inlineHelpText>10-digit Business Site number found on the account level.  Required for website orders.</inlineHelpText>
        <label>Business Site</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <errorMessage>Value does not exist or does not match filter criteria. (Business Site)</errorMessage>
            <filterItems>
                <field>Business_Site__c.Account__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Pipeline</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Business_Site__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CB_Customer_Signer_Tittle__c</fullName>
        <label>Customer Signer Tittle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Customer_Signer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created on &quot;Pipeline&quot;  Record type opportunity page layout so Docusign MDA envelope will be auto populated with contact name</description>
        <inlineHelpText>DocuSIgn Contact</inlineHelpText>
        <label>Customer Signer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (DocuSign Contact)</relationshipLabel>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CB_Dealer_Code__c</fullName>
        <formula>CB_Business_Site__r.Dealer_Code__c</formula>
        <label>Dealer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Dealership_Primary_Contact_Email__c</fullName>
        <formula>CB_Dealership_Primary_Contact__r.Email</formula>
        <label>Dealership Primary Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Dealership_Primary_Contact_Mobile__c</fullName>
        <formula>CB_Dealership_Primary_Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealership Primary Contact Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Dealership_Primary_Contact_Phone__c</fullName>
        <formula>CB_Dealership_Primary_Contact__r.Phone</formula>
        <label>Dealership Primary Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Dealership_Primary_Contact_Title__c</fullName>
        <label>Dealership Primary Contact Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CB_Dealership_Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Dealership Primary contact</description>
        <label>Dealership Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Dealership Primary Contact)</relationshipLabel>
        <relationshipName>Opportunities6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CB_DocuSign_Contact_Name__c</fullName>
        <formula>CB_Customer_Signer__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DocuSign Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_MDA_Link__c</fullName>
        <formula>Account.MDA_Link__c</formula>
        <label>MDA Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Oracle_Account_Number__c</fullName>
        <formula>Account.Account_Number__c</formula>
        <label>Oracle Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Order_Notes__c</fullName>
        <description>DSM will enter information related to special instruction about the order</description>
        <label>Order Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CB_Order_Submitted_Date__c</fullName>
        <label>Order Submitted Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Primary_Contact_Name__c</fullName>
        <formula>CB_Dealership_Primary_Contact__r.Full_Name__c</formula>
        <label>Dealership Primary Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Web_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created for add on Web Id to order forms via Docusign</description>
        <label>Web ID</label>
        <referenceTo>WebID__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CB_Web_Id_Value__c</fullName>
        <formula>CB_Web_ID__r.Name</formula>
        <label>Web Id Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDK_Opportunity_Owner_Profile__c</fullName>
        <formula>ADP_Opportunity_Owner__r.Profile.Name</formula>
        <label>CDK Opportunity Owner Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMF__c</fullName>
        <label>CMF</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancelled_Reason__c</fullName>
        <label>Cancelled Reason</label>
        <picklist>
            <picklistValues>
                <fullName>...</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Added per RQ-04826 with approval from Nancy Durant</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Check_in_on_Key_Milestones__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check in on Key Milestones</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Signer_1_Sign_in_Person_Override__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Signer 1 Sign in Person Override</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Signer_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Signer 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Client Signer1)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Signer_2_Sign_in_Person_Override__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Signer 2 Sign in Person Override</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Signer_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Signer 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Client Signer2)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Reason_Pipeline__c</fullName>
        <label>Closed Lost Reason</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Product Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Features/Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In contract with another vendor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Reason__c</fullName>
        <label>Closed Lost Reason</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Lost to Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Unavailable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Limitation Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Record</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Comments__c</fullName>
        <label>Closed Won Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cobalt_Consolidation_ID__c</fullName>
        <externalId>true</externalId>
        <label>Cobalt_Consolidation_ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Comments_on_Pain__c</fullName>
        <label>Comments on Pain</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commit_Comments__c</fullName>
        <label>Commit Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Compelling_Event_Date__c</fullName>
        <label>Compelling Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Compelling_Event__c</fullName>
        <label>Compelling Event</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competing_On__c</fullName>
        <label>Competing On</label>
        <picklist>
            <picklistValues>
                <fullName>...</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Competitor_Lost_To__c</fullName>
        <label>Competitor Lost To</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>3-Com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Computer Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alltel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applied Computer Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applied Virtual Vision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT&amp;T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AtCom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aut@revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autobase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autobase CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autocomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Flexilog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autopower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autosoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BellSouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Vision Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CarBiz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centrex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cobalt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comdial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conxsys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor_involved_who_you_lost_to__c</fullName>
        <label>Competitor Involved/Who You Lost To</label>
        <picklist>
            <picklistValues>
                <fullName>3-Com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Computer Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alltel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applied Computer Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applied Virtual Vision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT&amp;T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AtCom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aut@revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autobase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autobase CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autocomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Flexilog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autopower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autosoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BellSouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Vision Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CarBiz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centrex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cobalt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comdial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conxsys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complete_Spend_Sheet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete Spend Sheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmation_on_Configuration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmation on Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmation_on_Deal_Config_with_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmation on Deal Config with Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_by_Profile__c</fullName>
        <formula>CreatedBy.Profile.Name</formula>
        <label>Created by Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Check_Wizard__c</fullName>
        <formula>(hyperlink(&quot;http://Sales.hoffman.ds.adp.com/saportal/SLX_SDR_CrChkContractWiz.asp?OID=&quot; &amp; Id &amp; &quot;&amp;UID=&quot; &amp; $User.Id, &quot;Credit Check Wizard&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Check Wizard</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Ad_Spend__c</fullName>
        <formula>Current_Direct_Mail_Spend__c + Current_Internet_Spend__c + Current_Newspaper_Spend__c + Current_TV_Spend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Ad Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_BZ_Spend__c</fullName>
        <label>Current BZ Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Call_Handling_Process_Analyzed__c</fullName>
        <label>Current Call Handling Process Analyzed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Direct_Mail_Spend__c</fullName>
        <label>Current Direct Mail Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Internet_Spend__c</fullName>
        <label>Current Internet Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Lot_Mgmt_Vendor__c</fullName>
        <label>Current Lot Mgmt Vendor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Newspaper_Spend__c</fullName>
        <label>Current Newspaper Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Radio_Spend__c</fullName>
        <label>Current Radio Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_ServiceEdge_Vendor__c</fullName>
        <label>Current ServiceEdge Vendor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_TV_Spend__c</fullName>
        <label>Current TV Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Confirmed_ROPE_Finding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Confirmed ROPE Finding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customized_Presentation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customized Presentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DAP_Units__c</fullName>
        <label>DAP Units</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMS_Platform__c</fullName>
        <inlineHelpText>Web 1k = ADP &quot;Alliance&quot; DMS
Web 2k = all other ADP DMS
Competitive = vendor other than ADP</inlineHelpText>
        <label>DMS Platform</label>
        <picklist>
            <picklistValues>
                <fullName>Web 1k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web 2k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DOS_Deal_Jacket_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DOS Deal Jacket/SQT Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOS_VP_Approved_Date__c</fullName>
        <label>DOS/VP Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOS_VP_Approved_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DOS/VP Approved Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DS_SLS_DocuSign_Envelope_ID__c</fullName>
        <label>DocuSign Envelope ID</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Field used in Data Quality Score calculation and image.</inlineHelpText>
        <label>Data Quality Count</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IMAGE(CASE(  Data_Quality_Count__c ,
6, &quot;/img/samples/stars_500.gif&quot;, 
5, &quot;/img/samples/stars_500.gif&quot;, 
4, &quot;/img/samples/stars_400.gif&quot;, 
3, &quot;/img/samples/stars_300.gif&quot;, 
2, &quot;/img/samples/stars_300.gif&quot;, 
1, &quot;/img/samples/stars_100.gif&quot;,
0, &quot;/img/samples/stars_000.gif&quot;, 
null), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>5 star score based on data entered on Opportunity.</inlineHelpText>
        <label>Data Quality Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Demo_Completed__c</fullName>
        <inlineHelpText>Actual Date the Demo was performed</inlineHelpText>
        <label>Date Demo Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Demo_Scheduled__c</fullName>
        <inlineHelpText>Date the actual demo was scheduled</inlineHelpText>
        <label>Date Demo Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted_to_SOS__c</fullName>
        <label>Date Submitted to SOS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Jacket_Completion_Date__c</fullName>
        <label>Deal Jacket/SQT Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_State_ID__c</fullName>
        <label>Deal State ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>